# dont-panic-application

./: CMakeLists.txt  CMakeLists.txt.user.42c573b  CMakeLists.txt.user.50df48f  README.md  resources.qrc
UI/: main.qml
UI/StartupWindows/: ForgetPassword.qml  LoginScreen.qml  RegScreen.qml
UI/Styles/: BottomError.qml  DefaultButton.qml  DefaultText.qml  Input.qml  PasswordInput.qml  ToolBarButton.qml
headers/: TCPSocket.h  applicationcontroller.h  tray.h
srcs/: TCPSocket.cpp  applicationcontroller.cpp  main.cpp  tray.cpp
